# visar

./: .env.example  .gitgnore  .gitignore  README.md  pyproject.toml  repos.txt.example  requirements.txt
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml
data/: example-owner-repo_vulnids.json
docs/: CHANGELOG.md  CODE_REVIEW_2026-05.md  Contributing.md  ROADMAP.md
examples/: dashboard.html  example-owner-repo_vulnids.csv  visar_dashboard.html
scripts/: setup.ps1  setup.sh
src/: config.py  dashboard.py  main.py
src/helpers/: __init__.py  dashboard_funcs.py  docker_funcs.py  helper_funcs.py  logger_config.py  osv_funcs.py
src/visar/: __init__.py  config.py  dashboard.py  exceptions.py  main.py  models.py
src/visar/helpers/: __init__.py  dashboard.css  dashboard.js  dashboard_funcs.py  docker_funcs.py  helper_funcs.py  logger_config.py  osv_funcs.py
tests/: test_dashboard_funcs.py  test_docker_funcs.py  test_helper_funcs.py  test_logger_config.py  test_main.py  test_osv_funcs.py
