# =============================================================================
# Copyright (c) AtLongLast Analytics LLC
#
# Licensed under the Apache License, Version 2.0
#
# Project: https://github.com/AtLongLastAnalytics/visar
# Author: Robert Long
# Date: 2026-03
# Version: 1.1.0
#
# File: pyproject.toml
# Description: Project metadata and dependencies for uv. Run `uv sync` from
#   the project root to create the virtual environment and install all
#   dependencies. The generated uv.lock file pins exact versions and should
#   be committed to version control.
# =============================================================================

[project]
name = "visar"
version = "1.1.0"
description = "Vulnerability Identification, Scanning and Reporting"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "docker>=7.1.0",
    "idna>=3.10",
    "python-dotenv>=1.1.0",
    "pywin32>=310; sys_platform == 'win32'",
    "requests>=2.32.3",
    "urllib3>=2.4.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
# Test files manipulate sys.path before imports — E402 is intentional
"tests/*.py" = ["E402"]

[tool.uv]

[dependency-groups]
dev = [
    "coverage>=7.0",
    "ruff>=0.15.7",
]
# uv manages the virtual environment at .venv in the project root
