# =============================================================================
# Copyright (c) AtLongLast Analytics LLC
#
# Licensed under the Apache License, Version 2.0
#
# Project: https://github.com/AtLongLastAnalytics/visar
# Author: Robert Long
# Date: 2026-03
# Version: 1.2.0
#
# File: pyproject.toml
# Description: Project metadata and dependencies for uv. Run `uv sync` from
#   the project root to create the virtual environment and install all
#   dependencies. The generated uv.lock file pins exact versions and should
#   be committed to version control.
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visar"]
# Dashboard CSS/JS live as sibling files alongside dashboard_funcs.py so they
# get syntax highlighting and a stable CSP hash. Ship them in the wheel.
include = [
    "src/visar/**/*.py",
    "src/visar/**/*.css",
    "src/visar/**/*.js",
    "src/visar/**/*.png",
]

[project]
name = "visar"
version = "1.2.0"
description = "Vulnerability Identification, Scanning and Reporting"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.6.17",
    "charset-normalizer>=3.4.7",
    "docker>=7.1.0",
    "idna>=3.18",
    "python-dotenv>=1.2.2",
    "pywin32>=312; sys_platform == 'win32'",
    "requests>=2.34.2",
    "urllib3>=2.7.0",
]

[project.scripts]
visar = "visar.main:main"
visar-dashboard = "visar.dashboard:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
# Test files configure logging before later imports — E402 is intentional
"tests/*.py" = ["E402"]

[tool.uv]

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "ruff>=0.15.20",
]
# uv manages the virtual environment at .venv in the project root
